--- a/templates/index.html
+++ b/templates/index.html
@@ -52,18 +52,6 @@
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
-                    <li class="nav-item dropdown submenu">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Blog
-                        </a>
-                        <!-- #### We will be adding a blog section for Dec 5 presentation...#### >
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="nav-item"><a class="nav-link" href="blog">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="single-blog">Blog Details</a></li>
-                            <li class="nav-item"><a class="nav-link" href="elements">Elements</a></li>
-                        </ul> -->
-                    </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                 </ul>
             </div>
@@ -247,75 +235,38 @@
 
 
 
-    <!--================Get in Touch Area =================-->
-    <section class="get_in_touch_area">
-        <div class="container">
-            <div class="row get_touch_inner">
-                <div class="col-lg-6">
-                    <form class="contact_us_form row" action="contact_process.php" method="post" id="contactForm"
-                        novalidate="novalidate">
-                        <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject*">
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <textarea class="form-control" name="message" id="message" rows="1" placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <button type="submit" value="submit" class="btn submit_btn form-control">Send</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-lg-6">
-                    <div class="touch_details">
-                        <div class="l_title">
-                            <img src="img/icon/title-icon.png" alt="">
-                            <h6>Say hello</h6>
-                            <h2>Get in touch, send us an e-mail or call us</h2>
-                        </div>
-                        <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel
-                            suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
-                        <a href="#">
-                            <h5>Call us now</h5>
-                        </a>
-                        <a href="#">
-                            <h4>+452373 95593 232</h4>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================End Get in Touch Area =================-->
-
-    <!--================Map Area =================-->
-    <section class="world_map_area p_100">
-        <div class="container">
-            <div class="world_map_inner">
-                <img class="img-fluid" src="img/world-map.png" alt="">
-                <div class="bd-callout">
-                    <h3>Gibraltar Office</h3>
-                    <p>Casemates Square, no253 <br /> United kingdom</p>
-                    <h4><a href="#">+453678 9283 559</a> <a href="#">contact@template.com</a></h4>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================End Map Area =================-->
-
     <!--================Footer Area =================-->
+
+    <!-- <div class="col-md-4 colorlib-widget">
+        <h4>Contact Info</h4>
+        <ul class="colorlib-footer-links">
+            <div class="container">
+                <li>Mary Lin: Data Scientist</li>
+                <li><a href="https://themarylin.github.io" target="_blank"><i class="icon-location4"></i> Web Portfolio</a></li>
+            </div>
+            <div class="container">
+                <li>Jackie Dong: Data Scientist</li>
+                <li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+            </div>
+            <div class="container">
+                <li>Tyler Beauregard: Data Scientist</li>
+                <li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+            </div>
+            <div class="container">
+                <li>Marving Gomez: Data Scientist</li>
+                <li><a href="#"><i class="icon-location4"></i> yourwebsite.com</a></li>
+            </div>
+        </ul>
+    </div> -->
+
+
     <footer class="footr_area">
         <div class="footer_widget_area">
             <div class="container">
                 <div class="row footer_widget_inner">
                     <div class="col-lg-4 col-sm-6">
                         <aside class="f_widget f_about_widget">
-                            <img src="img/footer-logo.png" alt="">
+                            <img src="img/logo.png" alt="">
                             <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui,
                                 vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
                         </aside>
@@ -346,7 +297,7 @@
                                 <input type="text" class="form-control" placeholder="Your e-mail address here"
                                     aria-label="Your e-mail address here">
                                 <span class="input-group-btn">
-                                    <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
+                                    <button class="btn btn-secondary submit_btn" type="button"></button>
                                 </span>
                             </div>
                         </aside>
@@ -358,11 +309,11 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
+                        <p>Copyright</p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
-                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        </script> All rights reserved by ####</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </h5>
                 </div>
